# weather_scraper_fastapi

./: .gitignore  Dockerfile  README.md  config.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
k8s/: weather_app.yml
src/: get_weather.py  load_to_sheet.py  scrape_data.py
templates/: index.html
templates/static/: style.css
